#403: Using Java 11 idioms.